# palebluedot

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  main.py  pyproject.toml  test.py
.github/workflows/: ci_cd_metaflow_pipelines.yaml  ci_cd_webhook.yaml  docker_build_push.yaml  mistral-rs-docker-build.yaml  self-hosted-test.yaml  welcome.yml
configs/zenml/: k8s_stack.yaml
copier_pipeline_template/: copier.yaml
copier_pipeline_template/{{folder_name}}/: Dockerfile.jinja  pipeline.py.jinja  pyproject.toml.jinja
forge/: __main__.py  create_template.py  dependency.py  deploy_infra.py  deploy_metaflow.py  pydantic_models.py  register_zenml_stack.py  trigger_gh_actions.py
infra/: Pulumi.gpu_stack.yaml  Pulumi.llm_stack.yaml  Pulumi.metaflow-stack.yaml  Pulumi.on_prem_stack.yaml  Pulumi.vigyaan.yaml  Pulumi.vigyaan_stack.yaml  Pulumi.yaml  Pulumi.zenml.yaml  __main__.py  pyproject.toml
infra/applications/argilla/: deploy_argilla.py  deploy_elasticsearch.py  deploy_redis.py
infra/applications/argo/argo_events/event_sources/: metaflow.py
infra/applications/certificate_managers/: deploy_certificate_managers.py
infra/applications/gh_runners/: arc_controller.py  arc_scale_set.py
infra/applications/k8s/: minikube.py  namespace.py
infra/applications/metaflow/: deploy_metaflow.py
infra/applications/minio/: buckets.py  minio.py
infra/applications/persistent_claims/: pv.py
infra/applications/postgres/: deploy_postgres.py
infra/applications/secret_manager/: secrets.py  utils.py
infra/applications/webhooks/: metaflow_webhook.py
infra/components/: annotator.py  arc_controller.py  argo.py  buckets.py  certificate_manager.py  cluster.py  configuration.py  flyte.py  metaflow.py  minikube.py  minio.py  models_pvc.py  monitoring.py  mysql.py  namespace.py  postgres.py  secrets.py  slack.py  wehooks.py  zenml.py
infra/components/argo/argo_events/: deploy_argo_events.py
infra/components/argo/argo_events/event_sources/: minio.py
infra/components/argo/argo_events/sensors/: minio_sensor.py
infra/components/argo/argo_workflows/: deploy_argo_workflows.py
infra/components/datadog/: datadog.py
infra/components/gh_runners/: arc_controller.py  arc_scale_set.py
infra/components/grafana/: deploy_grafana.py
infra/components/k8s/: minikube.py  namespace.py  nvidia_gpu_operator.py
infra/components/metaflow/: deploy_metaflow.py
infra/components/minio/: buckets.py  minio.py
infra/components/persistent_claims/: pv.py
infra/components/postgres/: deploy_postgres.py
infra/components/prometheus/: deploy_prometheus.py
infra/components/secret_manager/: secrets.py  utils.py
infra/components/sql/: mysql.py
infra/components/zenml/: zenml.py
infra/config/: config.yaml
infra/configs/: config.yaml
infra/environments/local/: terragrunt.hcl
infra/environments/local/1_minikube/: terragrunt.hcl
infra/environments/local/2_dagster/: terragrunt.hcl
infra/environments/local/3_minio/: terragrunt.hcl
infra/helper/: constant.py
infra/modules/dagster/: main.tf  outputs.tf  values.yaml  variables.tf
infra/modules/minikube/: main.tf  variables.tf
infra/modules/minio/: main.tf  outputs.tf  variables.tf
infrastructure/: dependencies.py  deploy.py
infrastructure/10_webhooks/: Pulumi.yaml  __main__.py
infrastructure/11_annotator/: Pulumi.yaml  __main__.py
infrastructure/12_persistent_claims/: Pulumi.yaml  __main__.py
infrastructure/13_prometheus/: Pulumi.yaml  __main__.py
infrastructure/14_grafana/: Pulumi.yaml  __main__.py
infrastructure/15_metaflow_config/: Pulumi.yaml  __main__.py
infrastructure/16_additional_secrets/: Pulumi.yaml  __main__.py
infrastructure/1_cluster/: Pulumi.yaml  __main__.py
infrastructure/4_minio/: Pulumi.yaml  __main__.py
infrastructure/5_postgres/: Pulumi.yaml  __main__.py
infrastructure/5_sql/: __main__.py
infrastructure/6_orchestrator/: Pulumi.yaml  __main__.py
infrastructure/7_arc_runner/: Pulumi.yaml  __main__.py
infrastructure/configs/: config.yaml
pbd/: pyproject.toml  run.py
pbd/pipelines/data_annotator/: Dockerfile  pipelines.py  pyproject.toml  requirements.txt
pbd/pipelines/data_extraction/: Dockerfile  pipelines.py  pyproject.toml  requirements.txt  settings.py
pbd/pipelines/data_extraction/config/: config.yaml
pbd/pipelines/data_extraction/steps/: data.py  downloader.py  ocr.py
pbd/pipelines/data_processing/: Dockerfile  pipelines.py  pyproject.toml  requirements.txt  setting.py
pbd/pipelines/data_processing/config/: config.json
pbd/pipelines/data_processing/configs/: config.json
pbd/pipelines/data_processing/steps/: anchor_text.py  data_process.py  models.py  pdf_to_image.py  prompt.py  query_mistral.py  utils.py
pbd/pipelines/flyte_test/: Dockerfile  pipeline.py  pyproject.toml  requirements.txt
pbd/pipelines/ocr_engine/: Dockerfile  config.json  pipelines.py  pyproject.toml  requirements.txt  settings.py
pbd/pipelines/ocr_engine/configs/: config.json  config.yaml
pbd/pipelines/ocr_engine/steps/: data.py  downloader.py  format.py  image_utils.py  ocr.py  pdf_to_image.py  post_process_ocr.py  process_image.py  process_ocr.py  process_text.py  prompt.py  table_formatter.py  upload_data.py
pbd/pipelines/ocr_engine/steps/clean_text/: markdown.py  output_cleaner.py  post_process.py
pbd/pipelines/ocr_post_process/: Dockerfile  pipelines.py  pyproject.toml  requirements.txt
pbd/pipelines/ocr_post_process/configs/: config.json
pbd/pipelines/ocr_post_process/steps/: format.py  process_text.py  prompt.py  utils.py
pbd/pipelines/pretrain/: Dockerfile  pyproject.toml  requirements.txt  test.py
pbd/pipelines/pretrain/steps/: trainer.py
pbd/pipelines/pretrain/steps/callbacks/: base.py  checkpoint.py  gradient_log.py  metrics.py  throughput.py  tracking.py
pbd/pipelines/pretrain/steps/prepare_data/: data_collator.py  tokenize_data.py
pbd/pipelines/pretrain/steps/trainer/: exception.py  scheduler.py  state.py  trainer.py
scripts/: build_docker.sh  deploy_infra.sh  jenkins_docker_build.sh  run_pipeline.sh  set_env.sh  trigger_gh_actions.sh  zenml_stack.sh
(+79 files in other folders)
