[project]
name = "palebluedot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "pre-commit>=4.2.0",
 "typer",
 "rich",
 "metaflow",
 "pulumi>=3.181.0",
 "pulumi-kubernetes>=4.23.0",
 "pulumi-command>=1.1.0",
 "python-dotenv>=1.1.1",
 "infisicalsdk>=1.0.9",
 "pulumi-minio>=0.16.4",
 "omegaconf>=2.3.0",
]

[project.scripts]
forge = "forge.__main__:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*"]
