[project]
name = "palebluedot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "pre-commit>=4.2.0",
 "typer",
 "rich",
 "metaflow==2.15.21",
 "pulumi>=3.181.0",
 "pulumi-kubernetes>=4.23.0",
 "pulumi-command>=1.1.0",
 "python-dotenv>=1.1.1",
 "infisicalsdk>=1.0.9",
 "pulumi-minio>=0.16.4",
 "omegaconf>=2.3.0",
 "ruff>=0.12.5",
 "copier>=9.8.0",
 "zenml==0.91.0",
 "slack>=0.0.2",
 "s3fs>=2025.10.0",
 "slack-sdk>=3.38.0",
 "kubernetes>=34.1.0",
]

[project.scripts]
forge = "forge.__main__:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*", "infrastructure*", "infrastructure/components*"]
