[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "infisicalsdk>=1.0.6",
    "omegaconf>=2.3.0",
    "pulumi>=3.155.0",
    "pulumi-command>=1.0.2",
    "pulumi-kubernetes>=4.22.1",
    "pulumi-minio>=0.16.3",
    "zenml==0.83.0",
]
