[project]
name = "data-annotator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argilla>=2.8.0",
    "kubernetes>=33.1.0",
    "boto3>=1.38.27",
    "datasets>=3.6.0",
    "kubernetes>=32.0.1",
    "metaflow==2.16.3",
    "minio>=7.2.15",
    "s3fs>=0.4.2",
    "slack-sdk>=3.35.0",
]
