[project]
name = "data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "boto3>=1.37.18",
 "botocore>=1.37.18",
 "kubernetes>=32.0.1",
 "minio>=7.2.15",
 "mistralrs>=0.5.0",
 "pytubefix>=8.12.3",
 "s3fs>=0.4.2",
 "zenml==0.80.0",
]
