[project]
name = "data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.33",
    "botocore>=1.37.33",
    "ipython==8.35.0",
    "kubernetes>=32.0.1",
    "minio>=7.2.15",
    "s3fs>=0.4.2",
    "transformers>=4.51.3",
    "zenml>=0.80.2",
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]