[project]
name = "data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.18",
    "botocore>=1.37.18",
    "kubernetes>=33.1.0",
    "metaflow==2.15.21",
    "minio>=7.2.15",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.25.5",
    "s3fs>=0.4.2",
    "slack-sdk>=3.35.0",
]
