[project]
name = "flyte_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "kubernetes>=32.0.1",
    "slack-sdk>=3.35.0",
    "s3fs>=0.4.2",
    "minio>=7.2.15",
    "metaflow==2.15.21",
    "flytekit>=1.16.3",
]

[dependency-groups]
dev = []
