[project]
name = "ocr-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "boto3>=1.38.27",
    "datasets>=3.6.0",
    "json5>=0.12.0",
    "kubernetes>=32.0.1",
    "matplotlib>=3.10.3",
    "metaflow==2.15.21",
    "minio>=7.2.15",
    "pillow>=11.2.1",
    "pymupdf>=1.26.3",
    "s3fs>=0.4.2",
    "slack-sdk>=3.35.0",
    "transformers<4.54.0",
    "vllm==0.10.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.3",
]
