[project]
name = "ocr-post-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "boto3>=1.38.27",
    "datasets>=3.6.0",
    "json5>=0.12.0",
    "kubernetes>=32.0.1",
    "matplotlib>=3.10.3",
    "metaflow==2.16",
    "minio>=7.2.15",
    "pillow>=11.2.1",
    "s3fs>=0.4.2",
    "slack-sdk>=3.35.0",
    "transformers>=4.52.4",
    "vllm==0.9.2.0",
]
