[project]
name = "pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "pydantic>=2.11.9",
    "transformers>=4.57.2",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
]
test = [
    "trl>=0.25.1",
]
